# Social_Media_App

./: .env  README.md  new.py  pyproject.toml  streamlit_app.py
Database/: db.py
app/: Schema.py  app.py
