[project]
name = "social-media-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.137.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "imagekitio>=5.6.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.41.0",
    "requests>=2.32.0",
    "sqlalchemy>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
